--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <!--a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="#">
             <img src="assets/images/mbs-logo-lg.png" alt="Marg's Beauty Spot" class="mbs-logo-lg">
             <img src="assets/images/mbs-logo-sm.png" alt="Marg's Beauty Spot" class="mbs-logo-sm">
-          </a-->
+          </a>
           </div>
           <!--/.navbar-header-->
           <div id="main-nav" class="collapse navbar-collapse">
@@ -90,7 +90,7 @@
             <div class="container">
               <a href="#" class="scroll-top back-to-top">↑</a>
               <h1>Thalgo Facials</h1>
-              <a href="http://www.thalgo.com/en/"><img src="assets/images/thalgo-logo.png" alt="Thalgo logo" height="127" width="191"></a>
+              <a href="http://www.thalgo.com/en/"><img src="assets/images/thalgo-logo.svg" alt="Thalgo logo" height="127" width="191"></a>
               <p>Rediscover the treasures of marine beauty care.</p>
               <p>Full of indescribable beauty, the sea has been our
                 passion for more than forty years. Thalgo has gathered from the oceans
